--- a/src/main/resources/templates/user/userCenter.html
+++ b/src/main/resources/templates/user/userCenter.html
@@ -240,6 +240,11 @@
             var Apage = $('#Apage').val()
             var Cpage = $('#Cpage').val()
 
+            var Lsize = $('#Lsize').val()
+            var Cosize = $('#Cosize').val()
+            var Lpage = $('#Lpage').val()
+            var Copage = $('#Copage').val()
+
             laypage.render({
                 elem: 'Alaypage',
                 count: Asize,
