--- a/src/main/resources/static/css/global.css
+++ b/src/main/resources/static/css/global.css
@@ -1,12 +1,3 @@
-/**
- 
- @Name: Fly社区
- @Author: 贤心
- @Site: fly.layui.com
- 
- */
-
-
 /* 全局 */
 html,body{overflow-x: hidden;}
 html{background-color: #F2F2F2;}
@@ -16,3 +7,5 @@ i{font-style: normal;}
 .logo{position: absolute;left: 47px;top: 16px;}
 .logo img{width: 122px; height: 31px;}
 .headImg {height: 48px; width: 48px; position: absolute; top: 10px;}
+.content-body{position: relative; padding: 10px 15px; line-height: 24px;}
+.content-body img{width: 100%;}
