第十七次提交
添加了管理员页面仪表盘 有四大类数据统计图表

--- a/src/main/resources/templates/admin/commentManage.html
+++ b/src/main/resources/templates/admin/commentManage.html
@@ -10,7 +10,7 @@
 
     <div class="layui-tab-brief">
         <div style="height: 40px;"></div>
-        <div style="left: 200px; padding: 10px; height: 900px;" class="layui-panel">
+        <div style="left: 200px; padding: 10px; height: 100%; min-height: 900px;" class="layui-panel">
             <div class="layui-tab layui-tab-brief" style="margin: 20px;">
                 <ul class="layui-tab-title">
                     <li class="layui-this">用户信息</li>
