--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -9,7 +9,7 @@
 
     <div class="layui-tab-brief">
         <div style="height: 60px;"></div>
-        <div style="left: 200px; padding: 10px; height: 900px;" class="layui-panel">
+        <div style="left: 200px; padding: 10px; height: 100%; min-height: 900px;" class="layui-panel">
             <h1>欢迎您，<span th:text="${session.admin.adminNickName}">棠槿牵樱</span></h1>
             <br>
             学生网上交流论坛管理后台
