--- a/src/main/resources/templates/user/userNotice.html
+++ b/src/main/resources/templates/user/userNotice.html
@@ -5,110 +5,113 @@
 </head>
 
 <body>
-<div th:replace="header::header-fragment"></div>
+    <div th:replace="header::header-fragment"></div>
 
-<div class="layui-container" style="margin-bottom: 10px;">
-    <div class="layui-panel">
-        <div style="margin: 10px;">
-            <div class="layui-tab layui-tab-brief" lay-filter="reply">
-                <ul class="layui-tab-title">
-                    <li id="all" name="msgType">全部</li>
-                    <li id="system" name="msgType">系统通知</li>
-                    <li id="reply" name="msgType">回复</li>
-                    <li id="secret" name="msgType">私信</li>
-                </ul>
-                <div class="layui-tab-content">
-                    <div class="layui-tab-item layui-show">
-                        <th:block th:unless="${#lists.isEmpty(noticesList) and #lists.isEmpty(users)}">
-                            <th:block th:each=" n, nStat : ${noticesList}">
-                                <th:block
+    <div class="layui-container" style="margin-bottom: 10px;">
+        <div class="layui-panel">
+            <div style="margin: 10px;">
+                <div class="layui-tab layui-tab-brief" lay-filter="reply">
+                    <ul class="layui-tab-title">
+                        <li id="all" name="msgType">全部</li>
+                        <li id="system" name="msgType">系统通知</li>
+                        <li id="reply" name="msgType">回复</li>
+                        <li id="secret" name="msgType">私信</li>
+                    </ul>
+                    <div class="layui-tab-content">
+                        <div class="layui-tab-item layui-show">
+                            <th:block th:unless="${#lists.isEmpty(noticesList) and #lists.isEmpty(users)}">
+                                <th:block th:each=" n, nStat : ${noticesList}">
+                                    <th:block
                                         th:if="${nStat.index} ge ((${page} - 1) * 10) and ${nStat.index} lt (${page} * 10)">
-                                    <div class="layui-card-body">
-                                        <th:block th:if="${n.fromUserId} != -1">
-                                            <img class="headImg" th:src="@{${users[n.fromUserId].headImgUrl}}" alt="">
-                                        </th:block>
-                                        <th:block th:if="${n.fromUserId} == -1">
-                                            <img class="headImg" src="/images/avatar/default.png" alt="">
-                                        </th:block>
-                                        <div style="margin-left: 54px;">
-                                            <span class="layui-border-green layui-btn-xs">
-                                                <th:block th:if="${n.noticeType} == 1">
-                                                    系统消息
+                                        <div class="layui-card-body">
+                                            <th:block th:if="${n.fromUserId} != -1">
+                                                <img class="headImg" th:src="@{${users[n.fromUserId].headImgUrl}}"
+                                                    alt="">
+                                            </th:block>
+                                            <th:block th:if="${n.fromUserId} == -1">
+                                                <img class="headImg" src="/images/avatar/default.png" alt="">
+                                            </th:block>
+                                            <div style="margin-left: 54px;">
+
+                                                <th:block th:if="${n.noticeType} == 1 and ${n.fromUserId} == -1">
+                                                    <span class="layui-border-red layui-btn-xs">系统消息</span>
+                                                    <a href="">管理员</a> 向你发送了通知
+                                                    <th:block th:text="${n.noticeName}">通知测试</th:block>
                                                 </th:block>
-                                                <th:block th:if="${n.noticeType} == 2">
-                                                    回复
+
+                                                <th:block th:if="${n.noticeType} == 2 and ${n.fromUserId} != -1">
+                                                    <span class="layui-border-green layui-btn-xs">回复</span>
+                                                    <a href="" th:text="${users[n.fromUserId].nickName}"></a>
                                                 </th:block>
-                                                <th:block th:if="${n.noticeType} == 3">
+
+                                                <th:block th:if="${n.noticeType} == 3 and ${n.fromUserId} != -1">
                                                     私信
                                                 </th:block>
-                                            </span>
-                                            <th:block th:if="${n.fromUserId} == -1">
-                                                <a href="" >管理员</a>
-                                            </th:block>
-                                            <th:block th:if="${n.fromUserId} != -1">
-                                                <a href="" th:utext="${users[n.fromUserId].nickName}"></a>
-                                            </th:block>
-                                            回复了你的帖子
-                                            <a href="">帖子名</a><br>
-                                            2021-08-01 13:01:22 <br>
-                                            <span th:utext="${n.noticeContent}"></span>
+
+                                                <th:block th:if="${n.fromUserId} != -1">
+
+                                                </th:block>
+                                                回复了你的帖子
+                                                <a href="">帖子名</a><br>
+                                                <th:block th:text="${n.createTime}">2021-08-01 13:01:22</th:block><br>
+                                                <span th:utext="${n.noticeContent}"></span>
+                                            </div>
                                         </div>
-                                    </div>
-                                    <hr>
+                                        <hr>
+                                    </th:block>
                                 </th:block>
+                                <div class="layui-card-body" style="text-align: center;">
+                                    <div id="Claypage"></div>
+                                </div>
                             </th:block>
-                            <div class="layui-card-body" style="text-align: center;">
-                                <div id="Claypage"></div>
-                            </div>
-                        </th:block>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
-</div>
+    </div>
 
-<input id="size" name="size" th:value="${size}" style="position: absolute; visibility: hidden;" type="text"
-       readonly>
-<input id="page" name="page" th:value="${page}" style="position: absolute; visibility: hidden;" type="text"
-       readonly>
-<input id="msgType" name="msgType" th:value="${msgType}" style="position: absolute; visibility: hidden;" type="text"
-       readonly>
+    <input id="size" name="size" th:value="${size}" style="position: absolute; visibility: hidden;" type="text"
+        readonly>
+    <input id="page" name="page" th:value="${page}" style="position: absolute; visibility: hidden;" type="text"
+        readonly>
+    <input id="msgType" name="msgType" th:value="${msgType}" style="position: absolute; visibility: hidden;" type="text"
+        readonly>
 
-<script th:src="@{/layui/layui.js}"></script>
-<script th:src="@{/js/public.js}"></script>
-<script>
-    layui.use(['layer', 'form', 'element', 'laypage'], function () {
-        var layer = layui.layer
-        var element = layui.element;
-        var laypage = layui.laypage
-        var $ = layui.$
+    <script th:src="@{/layui/layui.js}"></script>
+    <script th:src="@{/js/public.js}"></script>
+    <script>
+        layui.use(['layer', 'form', 'element', 'laypage'], function () {
+            var layer = layui.layer
+            var element = layui.element;
+            var laypage = layui.laypage
+            var $ = layui.$
 
-        var msgTypes = document.getElementsByName("msgType")
-        var msgType = $("#msgType").val()
-        msgTypes[msgType].setAttribute("class", "layui-this")
+            var msgTypes = document.getElementsByName("msgType")
+            var msgType = $("#msgType").val()
+            msgTypes[msgType].setAttribute("class", "layui-this")
 
-        var size = $("#size").val()
-        var page = $("#page").val()
+            var size = $("#size").val()
+            var page = $("#page").val()
 
-        element.on('tab(reply)', function (data) {
-            window.location.href = '/user/userNotice?page=' + 1 + '&msgType=' + data.index
-        })
+            element.on('tab(reply)', function (data) {
+                window.location.href = '/user/userNotice?page=' + 1 + '&msgType=' + data.index
+            })
 
-        laypage.render({
-            elem: 'Claypage',
-            limit: 10,
-            count: size,
-            curr: page,
-            jump: function (obj, first) {
-                if (!first) {
-                    window.location.href = '/user/userNotice?page=' + obj.curr + '&msgType=' + msgType
+            laypage.render({
+                elem: 'Claypage',
+                limit: 10,
+                count: size,
+                curr: page,
+                jump: function (obj, first) {
+                    if (!first) {
+                        window.location.href = '/user/userNotice?page=' + obj.curr + '&msgType=' + msgType
+                    }
                 }
-            }
+            });
         });
-    });
-</script>
+    </script>
 </body>
 
 </html>
